Fri Apr 22 04:16:14 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): strings from psych have proper taint
	  markings.

	* test/psych/test_tainted.rb: test for string taint

Thu Apr 21 01:01:28 2011  Masaya Tarui  <tarui@ruby-lang.org>

	* win32/win32.c (CreateChild): maximum length of lpCommandLine is
	  32,768 characters, including the Unicode terminating null character.
	
Sat Oct  9 16:54:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RSHIFT): quote to get rid of argument expansion
	  for autoconf 2.68.

Wed Apr 20 14:41:28 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_each_line): check string's length when compare
	  separator and string. [ruby-core:35815] fixes #4586

Mon Apr 18 12:15:46 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
	  avoid float error. [ruby-core:35804]

Fri Apr 15 15:10:29 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/uri/generic.rb (#route_from_path): Fix a bug where
	  URI('http://h/b/').route_to('http://h/b') wrongly returned './'
	  (should be '../b'). [Bug #4476]

Thu Apr 14 23:43:43 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (ruby_float_step): wrong loop condition.
	  fixes [ruby-core:35753], reported by Joey Zhou.

	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
	  test above change.

Thu Apr 14 21:21:06 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (frexp, modf): wrongly declared as pure in
	  mingw math.h.

Thu Apr 14 21:21:01 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (ftruncate, truncate): mingw64 misses
	  prototypes.

Thu Apr 14 16:01:45 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_f_syscall): reduce warning: "HAVE___SYSCALL" is not defined.

Tue Apr 12 19:19:50 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb: avoid race condition. fixes #4572
