@@ -43,7 +43,7 @@ class Test_Marshal < Test::Unit::TestCase
 
   def test_parser_values
     v1 = [
-      1, -7778,                        # integers
+      1, -7778, -(2**31), 2**31-1,     # integers
       1.0, 0.0, -333.0, 2343434343.0,  # floats
       false, true, true, false,        # booleans
       "Hallo", "with < and >", ""      # strings
@@ -79,6 +79,20 @@ class Test_Marshal < Test::Unit::TestCase
 
     # missing, Date, Time, DateTime
     # Struct
+  end
+
+  def test_parser_invalid_values
+    values = [
+      -1-(2**31), 2**31,
+    ]
+    XMLRPC::XMLParser.each_installed_parser do |parser|
+      m = XMLRPC::Marshal.new(parser)
+
+      values.each do |v|
+        assert_raise(RuntimeError, "#{v} shouldn't be dumped, but dumped") \
+          { m.dump_response(v) }
+      end
+    end
   end
 
   def test_no_params_tag
