@@ -1,3 +1,8 @@
+Fri Apr 22 11:49:49 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/xmlrpc/create.rb (XMLRPC::Create#conv2value):
+	  XML-RPC's int is 32bit int, and Fixnum also may be beyond 32bit.
+
 Fri Apr 22 04:16:14 2011  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/parser.c (parse): strings from psych have proper taint
